samples/_failures_safe/1761614550_e12b71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b9f36a4.c: In function ‘main’:
./samples/SAFE/__tmp_4b9f36a4.c:159:12: error: missing terminating " character
  159 |     printf("\nTokens:\
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_4b9f36a4.c:159:5: error: expected expression at end of input
  159 |     printf("\nTokens:\
      |     ^~~~~~
./samples/SAFE/__tmp_4b9f36a4.c:159:5: error: expected declaration or statement at end of input
